# rs6

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  bootasm.S  i386-os.json  kernel.ld  rust-toolchain  sign.sh
.cargo/: config
.github/workflows/: build.yaml
asm/: Cargo.toml
asm/src/: lib.rs
bootloader/: Cargo.toml  bootasm.S
bootloader/src/: lib.rs
docs/: main.md  useful-crates.md
kernel/: Cargo.toml  entry.S
kernel/src/: asm.rs  entry.rs  lib.rs  paging.rs  serial.rs  vga.rs
src/: lib.rs
