[package]
name = "bootloader"
version = "0.1.0"
authors = ["Caleb Boylan <calebboylan@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
asm = { path = "../asm" }
rlibc = "1"
