[package]
name = "bootloader"
version = "0.1.0"
authors = ["Caleb Boylan <calebboylan@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
lto = true
opt-level = 'z'

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'

[dependencies]
asm = { path = "../asm" }
rlibc = "1"
