[package]
name = "kernel"
version = "0.1.0"
authors = ["Caleb Boylan <calebboylan@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
volatile = "0.2.6"
spin = "0.5"
x86 = "0.16.3"

[dependencies.lazy_static]
version = "1.3"
features = ["spin_no_std"]
