[package]
name = "kernel"
version = "0.1.0"
authors = ["Caleb Boylan <calebboylan@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
spin = "0.5"
volatile = "0.3"
x86 = "0.34"
bitfield = "0.13"

[dependencies.lazy_static]
version = "1.3"
features = ["spin_no_std"]
